<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#90EE90">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2E8B57"
        android:padding="10dp"
        android:text="@string/title_text"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/etOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/owner_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species_label"
        android:paddingLeft="5dp" />

    <ListView
        android:id="@+id/lvSpecies"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvAgeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:textSize="18sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="0" />

    <EditText
        android:id="@+id/etPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/purpose_hint" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_time" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:backgroundTint="#6200EE" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp" />

</LinearLayout>